--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Večerní úvahy
 description: ...deka, čaj nebo kafíčko se budou hodit :)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://morcinus.github.io/images/logo.png
 
 #
 # Flags below are optional
